--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -41,13 +41,13 @@ source(here("source", "primary_analyses.R"))
 
 # Executive Summary {#executive-summary}
 
-Many countries around the world provide nationwide dietary guidelines to the public and require nutrition labels on food products to help people make informed choices about foods and drinks they consume. Every individual, however, has different nutrition needs and preferences according to their age, sex, ethnicity, height, weight, and physical activity level, among many other factors. Therefore, people may benefit from more personalized dietary recommendations. Our goal is to provide the basis for an algorithm that recommends foods a person should consume based on their nutrition needs. To this end, we compared different approaches to grouping foods based on their nutrient profiles (i.e., spectrum clustering vs. k-means clustering). As expected, spectrum clustering provides better clustering, so we explore the clusters created through spectrum clustering further. Finally, we demonstrate how others can use our data-driven food groupings to meet their dietary needs. 
+Many countries around the world provide nationwide dietary guidelines to the public and require nutrition labels on food products to help people make informed choices about foods and drinks they consume. Every individual, however, has different nutrition needs and preferences according to their age, sex, ethnicity, height, weight, and physical activity level, among many other factors. Therefore, people may benefit from more personalized dietary recommendations. Our goal is to provide the basis for an algorithm that recommends foods a person should consume based on their nutrition needs. To this end, we compared different approaches to grouping foods based on their nutrient profiles (i.e., spectrum clustering vs. k-means clustering). Contrary to our a priori hypothesis, k-means clustering provides better clustering compared to spectrum clustering. We demonstrate how others can use our data-driven food groupings to meet their dietary needs. 
 
 # Introduction {#introduction} 
 
 ## Importance of nutrition in affecting everyday life 
 
-One of the most important determinants of one's health is their diet: the nutrients we consume can affect a range of our health outcomes, from cardiovascular disease [@ShantaRetelny2008] and obesity [@Popkin2004] to learning and general brain function [@Dani2005]. Unfortunately, many people around the world are not consuming enough of the nutrients that promote their health, and instead their diet consists mainly of too much of the nutrients that directly hurt their health [@Popkin2004]. In many cases, across the United States and similarly wealthy countries, people are simply overwhelmed by the overabundance of food options available to them, so they end up choosing whatever is easiest and/or fastest to consume, leading to the popularity of "fast food". Given the importance of choosing the nutrients in our diet, helping people narrow down the range of options for foods by creating categories of foods that are similar will likely free up time to make better diet decisions.  
+One of the most important determinants of a person's health is their diet: the nutrients we consume can affect a range of our health outcomes, from cardiovascular disease [@ShantaRetelny2008] and obesity [@Popkin2004] to learning and general brain function [@Dani2005]. Unfortunately, many people around the world are not consuming enough of the nutrients that promote their health, and instead their diet is largely comprised of nutrients that directly hurt their health [@Popkin2004]. In many cases, across the United States and similarly wealthy countries, people are simply overwhelmed by the overabundance of food options available to them, so they end up choosing whatever is easiest and/or fastest to consume, leading to the popularity of "fast food". Given the importance of choosing the nutrients in our diet, helping people narrow down the range of options for foods by creating categories of foods that are similar will likely free up time to make better diet decisions.  
 
 ## Problem with current food groupings 
 
@@ -71,20 +71,20 @@ Also, it is worth noting that there are many values that are missing. For instan
 
 ## Main analyses {#analyses}
 
-Since our goal is to identify the *best* algorithm for grouping foods that will help a person plan out their meals to best suit their needs, we compared different approaches to grouping the foods based on their nutrient profiles. That is, we compared different methods to make sure foods are as similar as possible in terms of their nutrient profile (that is, we wanted to maximize in-group similarity), while also making sure foods assigned to different groups have very different nutrient profiles (in other words, minimize out-group similarity). The code, database, and final write up associated with this project is publicly available [here](https://www.tinyurl.com/4x43u439). 
+Since our goal is to identify the *best* algorithm for grouping foods that will help a person plan out their meals to best suit their needs, we compared different approaches to grouping the foods based on their nutrient profiles. That is, we compared different methods to make sure foods are as similar as possible in terms of their nutrient profile (that is, we wanted to maximize in-group similarity), while also making sure foods assigned to different groups have very different nutrient profiles (in other words, minimize out-group similarity). The code, database, and final write up associated with this project are publicly available [here](https://www.tinyurl.com/4x43u439). 
 
 The first option we explored to achieve this goal was using k-means clustering on the dataset. K-means clustering is a commonly used unsupervised machine learning algorithm to divide a dataset into pre-specified set of groups (known as clusters in this context). The algorithm assigned foods to clusters based on which assignments will keep the distance between the nutrient profile of each food assigned to a cluster and the mean nutrient profile for a given cluster as low as possible. In other words, it tries to assign foods to clusters that will achieve the highest possible intra-group similarity for the cluster number that we specified. To identify the optimal number of clusters, we used the silhouette method - which essentially compares the quality of clusters produced across a different range of cluster sizes. To make this comparison, the silhouette method calculates the average silhouette width for a given cluster size, *k*. The silhouette width is a measure of the average distance between clusters, where higher values are a sign of good clustering. 
 
-The second approach we explored was using spectrum clustering. Spectrum clustering adds another step right before the k-means clustering approach. Instead of using the raw data to create clusters, spectrum clustering minimizes the number of variables that we cluster on by including a principal components analysis (also known as PCA) right before the clustering analysis. PCA may be especially advantageous when there are a large number of variables you want to cluster on, because it tries to linearly combine the old variables into new ones (aka PC scores) in a way that maximizes the variance. By maximizing variance during PCA, we can reduce the dimensions of the data without losing much information from the original data. Once we had the PC scores, we used the silhouette method like before to identify the optimal number of clusters before running k-means clustering.  
+The second approach we explored was spectrum clustering. Spectrum clustering adds another step right before the k-means clustering approach. Instead of using the raw data to create clusters, spectrum clustering minimizes the number of variables that we cluster on by including a principal components analysis (also known as PCA) right before the clustering analysis. PCA may be especially advantageous when there are a large number of variables you want to cluster on, because it tries to linearly combine the old variables into new ones (aka PC scores) in a way that maximizes the variance. By maximizing variance during PCA, we can reduce the dimensions of the data without losing much information from the original data. Once we had the PC scores, we used the silhouette method like before to identify the optimal number of clusters before running k-means clustering.  
 
-These were the two main clustering approaches that we compared. Since spectrum clustering combines the power of noise reduction through PCA with clustering analyses, we expected beforehand that it would be a better approach for grouping our data. For both sets of analyses we standardized the data beforehand, since all nutrient values are measured in different units. 
+These were the two main clustering approaches that we compared. Since spectrum clustering combines the power of noise reduction through PCA with clustering analyses, we expected beforehand that it would be a better approach for grouping our data. For both sets of analyses we standardized and centered the data beforehand, since all nutrient values are measured in different units. 
 
 # Results
 
 ## Comparing k-means clustering to spectrum clustering 
 ### First approach: K means clustering 
 
-The silhouette method recommended we use 2 clusters ([see appendix](#appendix)), so we ran k-means clustering using `kmeans()` with centers set to 2. Once created, we explored some of the characteristics of the clusters. First, there is a notable discrepancy in the number of foods assigned to each cluster, with the larger cluster consisting of `r max(data_mean_imp.kmeans$size)` and the smaller cluster consisting of `r min(data_mean_imp.kmeans$size)`. Ideally, the between-cluster sum of squares should be a large proportion of the total sum of squares (the total distance of all observations from the global center), which would suggest that there is high separation between groups. In this case, we find that between-cluster sum of squares (`r data_mean_imp.kmeans$betweenss`) explains `r data_mean_imp.kmeans$betweenss/data_mean_imp.kmeans$totss*100`% of the total sum of squares (`r data_mean_imp.kmeans$totss`). The plot below shows what the clusters looked like using k-means clustering across two randomly chosen variables: carbs and calories, along with the mean values of each cluster for those variables.
+The silhouette method recommended we use 2 clusters ([see appendix](#appendix)), so we ran k-means clustering using `kmeans()` with centers set to 2. Once created, we explored some of the characteristics of the clusters. First, there is a notable discrepancy in the number of foods assigned to each cluster, with the larger cluster consisting of `r max(data_mean_imp.kmeans$size)` nutrients and the smaller cluster consisting of `r min(data_mean_imp.kmeans$size)` nutrients. Ideally, the between-cluster sum of squares should be a large proportion of the total sum of squares (the total distance of all observations from the global center), which would suggest that there is high separation between groups. In this case, we find that between-cluster sum of squares (`r data_mean_imp.kmeans$betweenss`) explains `r data_mean_imp.kmeans$betweenss/data_mean_imp.kmeans$totss*100`% of the total sum of squares (`r data_mean_imp.kmeans$totss`). The plot below shows what the clusters looked like using k-means clustering across two randomly chosen variables: carbohydrates and calories, along with the mean values of each cluster for those variables.
 
 ```{r}
 clusterplot1
@@ -94,7 +94,7 @@ clusterplot1
 
 To determine the number of PCs that would be most appropriate for our dataset, we created a scree plot with the proportion of variation explained (PVE) as a function of the number of PCs used ([see appendix](#appendix)). Based on the elbow rule, we were looking for a point on the plot at which there are diminishing returns on the PVE as PCs increase (i.e., there is a point at which the PVE flattens out as number of PCs increase). We chose to use 10 PCs based on the elbow rule. We then ran k-means clustering analysis on the 10 PCs that were created for each nutrient, with the recommended 8 clusters based on average silhouette width ([see appendix](#appendix)).
 
-First, there is a wide range in the number of foods assigned to each cluster, with the largest cluster consisting of `r max(data_mean_imp.kmeans$size)` and the smallest cluster consisting of `r min(data_mean_imp.kmeans$size)`, and a median cluster size of `r median(data_mean_imp.kmeans$size)`. The between-cluster sum of squares (`r data_mean_imp.kmeans$betweenss`) explains `r data_mean_imp.kmeans$betweenss/data_mean_imp.kmeans$totss*100`% of the total sum of squares (`r data_mean_imp.kmeans$totss`). The plot below shows what the 8 clusters looked like using spectrum clustering across the first two PCs, along with labels for the centroid of each cluster. 
+First, there is a wide range in the number of foods assigned to each cluster, with the largest cluster consisting of `r max(data.mean.imp.spectrum.kmeans$size)` and the smallest cluster consisting of `r min(data.mean.imp.spectrum.kmeans$size)`, and a median cluster size of `r median(data.mean.imp.spectrum.kmeans$size)`. The between-cluster sum of squares (`r data.mean.imp.spectrum.kmeans$betweenss`) explains `r data.mean.imp.spectrum.kmeans$betweenss/data.mean.imp.spectrum.kmeans$totss*100`% of the total sum of squares (`r data.mean.imp.spectrum.kmeans$totss`). The plot below shows what the 8 clusters looked like using spectrum clustering across the first two PCs, along with labels for the centroid of each cluster. 
 
 ```{r}
 clusterplot3
@@ -139,7 +139,7 @@ kcal_cluster1
 
 ## Case study: Following a diet to gain muscle 
 
-After determining the best clustering approach based on food nutrient profile, we provide a case study to serve as examples of how this tool can be used to make recommendations for a person who has specific dietary needs. Arnold is an aspiring professional bodybuilder that is interested in gaining muscle as quickly as possible. Since he knows the importance of nutrition in affecting the muscle-building process, he plans to change his diet to achieve this goal and has decided to follow the guidance he found at the links [here](https://www.coachmag.co.uk/nutrition/healthy-eating/1263/12-best-nutrients-and-vitamins-building-muscle-and-burning-fat) and [here](https://www.muscleandfitness.com/nutrition/gain-mass/10-nutrition-rules-follow-if-you-want-build-muscle/). Since Arnold is currently 180 pounds and a person that wants to gain muscle is recommended to consume 1.5 grams of protein per pound of bodyweight, his target daily intake of protein is 270 grams per day. It is also recommended that people consume between 2-3 grams of carbohydrates per pound to gain muscle. Therefore, Arnold aims to consume between 360 and 540 grams of total carbohydrates per day. Fat is another important macronutrient that will affect Arnold's muscle-building process. Since the articles he found suggest between 20 and 30 percent of his calories should come from fat, he aims to consume X grams of fat per day. Finally, it is recommended that he consume at least 3600 kilocalories per day to gain muscle. There are also several other nutrients that he would like to consume at above 2 standard deviations above the mean based on their muscle-building properties including: calcium, biotin, iron, vitamin C, selenium, Omega 3, Vitamin D, vitamin B12, copper, magnesium, riboflavin, and zinc. 
+After determining the best clustering approach based on food nutrient profile, we provide a case study to serve as examples of how this tool can be used to make recommendations for a person who has specific dietary needs. Arnold is an aspiring professional bodybuilder that is interested in gaining muscle as quickly as possible. Since he knows the importance of nutrition in affecting the muscle-building process, he plans to change his diet to achieve this goal and has decided to follow the guidance he found at the links [here](https://www.coachmag.co.uk/nutrition/healthy-eating/1263/12-best-nutrients-and-vitamins-building-muscle-and-burning-fat) and [here](https://www.muscleandfitness.com/nutrition/gain-mass/10-nutrition-rules-follow-if-you-want-build-muscle/). Since Arnold is currently 180 pounds and a person that wants to gain muscle is recommended to consume 1.5 grams of protein per pound of bodyweight, his target daily intake of protein is 270 grams per day. It is also recommended that people consume between 2-3 grams of carbohydrates per pound to gain muscle. Therefore, Arnold aims to consume between 360 and 540 grams of total carbohydrates per day. Finally, it is recommended that he consume at least 3600 kilocalories per day to gain muscle. There are also several other nutrients that he would like to consume at above 2 standard deviations above the mean based on their muscle-building properties including: calcium, biotin, iron, vitamin C, selenium, Omega 3, Vitamin D, vitamin B12, copper, magnesium, riboflavin, and zinc. 
 
 To simulate Arnold, we created a copy of the dataset from our main analyses and compared Arnold's daily nutrient targets to the daily nutrient recommendations for someone in the general population who matches him on all characteristics except for their level of activity. To determine a point of comparison for Arnold's nutrient intake, we used the [DRI Calculator for Healthcare Professionals from the National Argicultural Library](https://www.nal.usda.gov/fnic/dri-calculator/). This tool calculates daily nutrient recommendations based on the Dietary Reference Intakes (DRIs) established by the Health and Medicine Division of the National Academies of Sciences, Engineering and Medicine, representing the most current scientific knowledge on nutrient needs. We inserted gender (Male), age  (20), height (5 feet 10 inches), weight (180 pounds), and activity level (sedentary) for someone who matches Arnold on all characteristics *but* activity level, since Arnold will be above the mean on activity level compared to the typical person. Therefore, the nutrient recommendations provided by this tool are a representation of someone who matches Arnold on all characteristics, but does not aspire to be a pro bodybuilder like he does (and hence has a lower activity level). The metric of comparison we used is how much larger (or smaller) Arnold's nutrient goals are compared to the recommendations from the DRI Calculator. For instance, Arnold is aiming to consume 3600 kilocalories per day, while it is generally recommended to consume 2734 kilocalories per day for someone like him but is less active. Therefore, Arnold is consuming approximately 1.32 (3600/2734) times the amount of kilocalories recommended. Based on these calculations, Arnold will be consuming 1.2 times the amount of total carbohydrates recommended, 4.15 times the amount of total carbohydrates recommended, 270 times the amount of total saturated fats recommended, and 10.8 times the amount of total total fat recommended. We created nutrient data for Arnold by multiplying the average value of the target nutrient across the entire dataset by the amount Arnold is consuming above the mean (e.g., 1.32 * average value of nutrient across all foods) for kilocalories, total carbohydrates, saturated fats, protein, and total fat. On the other hand, for the list of nutrients above where Arnold generally knows he wants to consume at least 2 standard deviations above the mean (i.e., calcium, biotin, iron, vitamin C, selenium, Omega 3, Vitamin D, vitamin B12, copper, magnesium, riboflavin, and zinc), we calculated and inserted the value representing 2 standard deviations above the mean into Arnold's nutrient data. 
 
@@ -187,9 +187,15 @@ Our case study with Arnold provides an example of how these results can be used 
 # Limitations {#limitations} 
 
 One of the more notable limitations of this work is that the Canadian Nutrient File only provides average amounts of the nutrients for a combination of all available versions of a given food (e.g., average sugar content of all brands of ketchup). Therefore, it is possible that the clustering results here may not be useful in cases where the nutrient profile of a specific brand of food deviates far from the mean.
-Also, this dataset is only relevant to products available in Canada - so the results cannot be generalized to products from other countries. Therefore, future research should explore whether these findings replicate among products in other countries. Another feature of the dataset that may be considered a limitation depending on a person's needs is that the nutrient values are all standardized and thus may not be representative of how much a person may actually consume in a package. A person would need to convert the nutrient values based on the actual portion sizes they eat if they wanted to accurately assess many of their daily nutrient goals their hitting. Finally, in the case study, we had only a proxy for nutrient recommendations based on target nutrient goals. More specifically, we used daily recommended nutrients as the proxy to scale Arnold's nutrient amounts when we created the fake data, but all of the nutrients in our dataset are at the level of an individual food. Therefore, using this tool with food-specific goals may be more appropriate, since our calculations were at a more aggregate level (i.e., "how much above the average are Arnold's nutrient goals?" rather than "how much above the average is this specific food?"). Overall, there are a number of fruitful avenues for future work to extend and improve upon our current analyses. 
+Also, this dataset is only relevant to products available in Canada - so the results cannot be generalized to products from other countries. Therefore, future research should explore whether these findings replicate among products in other countries. Another feature of the dataset that may be considered a limitation depending on a person's needs is that the nutrient values are all standardized and thus may not be representative of how much a person may actually consume in a package. A person would need to convert the nutrient values based on the actual portion sizes they eat if they wanted to accurately assess whether they are hitting their daily nutrient goals. Finally, in the case study, we had only a proxy for nutrient recommendations based on target nutrient goals. More specifically, we used daily recommended nutrients as the proxy to scale Arnold's nutrient amounts when we created the fake data, but all of the nutrients in our dataset are at the level of an individual food. Therefore, using this tool with food-specific goals may be more appropriate, since our calculations were at a more aggregate level (i.e., "how much above the average are Arnold's nutrient goals?" rather than "how much above the average is this specific food?"). Overall, there are a number of fruitful avenues for future work to extend and improve upon our current analyses. 
 
 # Appendix {#appendix} 
+
+## Missing values in original dataset {#missing-vals-clean}
+
+```{r}
+inspect.na(wide_data, summary = F)
+```
 
 
 ## Full summary of clean dataset {#clean-data-summary}
@@ -200,11 +206,6 @@ data_mean_imp %>% dfSummary(.,  plain.ascii = FALSE, style = 'grid', graph.magni
 
 ```
 
-## Missing values in clean dataset {#missing-vals-clean}
-
-```{r}
-inspect.na(wide_data, summary = F)
-```
 
 ## Optimal number of clusters for k-means clustering 
 
